# i2c_timingr_calc

./: README.md  bun.lockb  eslint.config.js  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ThemeSelector.vue  TimingCalculator.vue  TimingFormulas.vue  TimingNotes.vue  TimingRegister.vue
src/types/: timing.ts  vue3-katex.d.ts
src/utils/: register.ts
